# my_py_cli_playground

ico_to_svg/: .gitignore  BUILD_EXE.md  CHANGELOG.md  CLEANUP_SUMMARY.md  INSTALL_WINDOWS.md  INSTALL_WINDOWS_EXE.md  PROJECT_STATUS.md  README.md  ico_to_svg_legacy.py  merge-to-main.ps1  pyproject.toml  test-merge-script.ps1
ico_to_svg/.github/workflows/: build-exe.yml  ci.yml
ico_to_svg/docs/: WINDOWS_EXE_IMPLEMENTATION.md
ico_to_svg/docs/status/: CURRENT_STATE  ORIGINAL_SCRIPT_GIST.md  Plan.md
ico_to_svg/src/ico_to_svg/: __init__.py  __main__.py  cli.py  core.py  ico_parser.py  svg_writer.py
ico_to_svg/tests/: __init__.py  conftest.py  generate_ico.py  smoke.py
ico_to_svg/tests/exe/: __init__.py  test_exe_integration.py
ico_to_svg/tests/integration/: test_convert_raster.py  test_convert_vector.py  test_info_command.py
ico_to_svg/tests/unit/: test_ico_parser.py  test_size_selection.py  test_svg_writer.py
